--- a/css/common.less
+++ b/css/common.less
@@ -21,9 +21,9 @@ img {
     vertical-align: middle;
 }
 
-a {
-    color: @aColor  !important;
-}
+// a {
+//     color: @aColor  !important;
+// }
 
 html {
     overflow-y: scroll;
@@ -359,14 +359,14 @@ input:-ms-input-placeholder {
                 background-color: #000;
                 margin-top: 30px;
                 &>img{
-                    opacity: .7;
-                    transition: all .3s;
+                    opacity: 1;
+                    // transition: all .3s;
                 }
-                &:hover{
-                    &>img{
-                        opacity: 1;
-                    }
-                }
+                // &:hover{
+                //     &>img{
+                //         opacity: 1;
+                //     }
+                // }
             }
         }
     }
