--- a/css/contact.less
+++ b/css/contact.less
@@ -128,8 +128,8 @@
         .left-info{
             float: left;
             width: 600px;
-            line-height: 40px;
-            font-size: 24px;
+            line-height: 32px;
+            font-size: 18px;
             letter-spacing: 0px;
             color: #333;
             &>p{
@@ -139,12 +139,12 @@
                 }
             }
             .m_t{
-                margin-top: 40px;
+                margin-top: 20px;
             }
         }
         .right-pic{
             float: right;
-            margin-top: 30px;
+            // margin-top: 10px;
             &>img{
                 width: 100%;
             }
