--- a/css/course.less
+++ b/css/course.less
@@ -58,7 +58,7 @@
                 .tab-bd{
                     margin-top: 45px;
                     .tab-item{
-                        display: none;
+                        // display: none;
                         text-align: left;
                         &>img{
                             float: right;
