--- a/css/contact.css
+++ b/css/contact.css
@@ -37,7 +37,8 @@
   cursor: pointer;
 }
 .contact_main .contact-container .left-nav .nav-hd .nav-tab:nth-child(1),
-.contact_main .contact-container .left-nav .nav-hd .nav-tab:nth-child(2) {
+.contact_main .contact-container .left-nav .nav-hd .nav-tab:nth-child(2),
+.contact_main .contact-container .left-nav .nav-hd .nav-tab:nth-child(3) {
   border-bottom: solid 1px #e1e1e1;
 }
 .contact_main .contact-container .left-nav .nav-hd .nav-tab .tab-icon {
