--- a/css/contact.less
+++ b/css/contact.less
@@ -36,7 +36,7 @@
                     font-size: 16px;
                     color: #999999;
                     cursor: pointer;
-                    &:nth-child(1),&:nth-child(2){
+                    &:nth-child(1),&:nth-child(2),&:nth-child(3){
                         border-bottom: solid 1px #e1e1e1;
                     }
                     .tab-icon{
