--- a/css/about_us.less
+++ b/css/about_us.less
@@ -78,7 +78,7 @@
     }
     .fixed{
         position: fixed;
-        top: 130px;
+        top: 200px;//+固定导航栏高度
         z-index: 1000;
     }
     .column-wrapper{
