--- a/css/common.css
+++ b/css/common.css
@@ -104,6 +104,10 @@ input:-ms-input-placeholder {
   bottom: 20px;
   z-index: 2;
 }
+.top-nav .nav-bar .pos-center {
+  bottom: 50%;
+  transform: translateY(50%);
+}
 .top-nav .nav-bar .r-nav {
   float: right;
 }
@@ -171,6 +175,13 @@ input:-ms-input-placeholder {
 .top-nav .nav-bar .r-nav .item-current .item_link {
   background-color: #fc9010;
   border-radius: 8px;
+}
+.fix-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
 .banner {
   position: relative;
