--- a/Pagination.js demo/css/common.css
+++ b/Pagination.js demo/css/common.css
@@ -7,14 +7,11 @@
   width: 1200px;
   margin: 0 auto;
 }
-.f_l {
-  float: left;
-}
-.f_r {
-  float: right;
-}
 img {
   vertical-align: middle;
+}
+a {
+  color: #333 !important;
 }
 html {
   overflow-y: scroll;
@@ -23,10 +20,7 @@ html {
 body {
   font-family: PingFang-SC-Regular;
   font-size: 14px;
-  min-width: 1366px;
-  width: 100%;
-  padding-top: 280px;
-  overflow: hidden;
+  padding-top: 70px;
 }
 h1,
 h2,
@@ -88,64 +82,37 @@ input:-ms-input-placeholder {
 .clearfix {
   *zoom: 1;
 }
-.top-container {
-  position: absolute;
+.top-nav {
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  /* 这里移动端打开980是因为没有移动端视口适配，布局视口宽度就是980px */
-  min-width: 1366px;
-  z-index: 999;
-}
-.top-container .bg {
-  text-align: center;
-  height: 210px;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.top-container .top-nav {
   width: 100%;
   height: 70px;
   line-height: 70px;
-  background-color: #ef6d01;
+  background-color: #fafbfd;
   box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.3);
+  z-index: 999;
 }
-.top-container .top-nav .nav-bar {
-  position: relative;
+.top-nav .nav-bar {
   height: 100%;
 }
-.top-container .top-nav .nav-bar .logo {
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  z-index: 2;
+.top-nav .nav-bar .logo {
+  float: left;
 }
-.top-container .top-nav .nav-bar .pos-center {
-  bottom: 50%;
-  transform: translateY(50%);
-}
-.top-container .top-nav .nav-bar .r-nav {
+.top-nav .nav-bar .r-nav {
   float: right;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item {
+.top-nav .nav-bar .r-nav .nav-item {
   float: left;
   position: relative;
   margin-right: 10px;
-  width: 120px;
+  width: 110px;
   height: 70px;
-  color: #fff;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item:nth-child(6) {
+.top-nav .nav-bar .r-nav .nav-item:nth-child(6) {
   margin-right: 0;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .item-pic {
-  position: absolute;
-  top: 5px;
-  left: 50%;
-  transform: translate(-50%, -100%);
-}
-.top-container .top-nav .nav-bar .r-nav .nav-item .item_link {
+.top-nav .nav-bar .r-nav .nav-item .item_link {
   position: absolute;
   top: 50%;
   left: 0;
@@ -156,49 +123,41 @@ input:-ms-input-placeholder {
   line-height: 35px;
   font-size: 16px;
   text-align: center;
-  color: #fff!important;
+  color: #333;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .menu {
+.top-nav .nav-bar .r-nav .nav-item .fw_menu {
   display: none;
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 100%);
-  padding: 2px 0 0;
-  background-color: transparent;
+  padding: 10px 0 24px;
+  background-color: #fff;
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 0px 0px 5px 5px;
+  border-radius: 0px 0px 55px 55px;
   overflow: hidden;
   z-index: 1000;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .menu .menu_item {
-  width: 120px;
+.top-nav .nav-bar .r-nav .nav-item .fw_menu .fw_item {
+  width: 110px;
   text-align: center;
-  background-color: #fa9a00;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .menu .menu_item > a {
+.top-nav .nav-bar .r-nav .nav-item .fw_menu .fw_item > a {
   display: block;
   height: 30px;
   line-height: 30px;
   font-size: 14px;
-  color: #fff!important;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .menu:nth-child(1) {
+.top-nav .nav-bar .r-nav .nav-item .fw_menu:nth-child(1) {
   margin-top: 0;
 }
-.top-container .top-nav .nav-bar .r-nav .nav-item .menu_item_cur .menu_item_link {
+.top-nav .nav-bar .r-nav .nav-item .fw_item_cur .fw_item_link {
+  color: #ef6d01 !important;
+}
+.top-nav .nav-bar .r-nav .item-current .item_link {
   background-color: #ef6d01;
-}
-.top-container .top-nav .nav-bar .r-nav .item-current .item_link {
-  background-color: #fc9010;
   border-radius: 8px;
-}
-.fix-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
+  color: #fff !important;
 }
 .banner {
   position: relative;
@@ -210,9 +169,6 @@ input:-ms-input-placeholder {
 .banner .swiper-container .swiper-slide .slide {
   display: inline-block;
   position: relative;
-}
-.banner .swiper-container .swiper-slide .slide > img {
-  width: 100%;
 }
 .banner .swiper-container .swiper-slide .slide .home-banner-desc {
   position: absolute;
@@ -261,6 +217,77 @@ input:-ms-input-placeholder {
   background: url("../img/icon_arr.png") no-repeat;
   background-size: cover;
 }
+.banner .swiper-container .form-container {
+  position: absolute;
+  right: 73px;
+  top: 0;
+  width: 289px;
+  height: 100%;
+  padding: 20px 0;
+  z-index: 999;
+}
+.banner .swiper-container .form-container .form-title {
+  height: 60px;
+  line-height: 60px;
+  font-family: PingFang-SC-Bold;
+  font-size: 29px;
+  letter-spacing: 0px;
+  color: #333;
+  text-align: center;
+}
+.banner .swiper-container .form-container .input-item {
+  margin-top: 11px;
+  font-family: PingFang-SC-Medium;
+  color: #666;
+}
+.banner .swiper-container .form-container .input-item > input {
+  height: 36px;
+  width: 100%;
+  padding: 0 16px;
+  border: solid 1px #ef6d01;
+  border-radius: 3px;
+  font-size: 16px;
+  color: #666;
+}
+.banner .swiper-container .form-container .input-item > select {
+  float: left;
+  height: 36px;
+  width: 145px;
+  padding: 0 12px;
+  font-size: 16px;
+  color: #666;
+  border-radius: 3px;
+  border: solid 1px #ef6d01;
+  outline: none;
+}
+.banner .swiper-container .form-container .input-item > select:nth-child(1) {
+  width: 137px;
+  margin-right: 7px;
+}
+.banner .swiper-container .form-container .input-item > select .fontColor9 {
+  color: #999;
+}
+.banner .swiper-container .form-container .input-item > textarea {
+  width: 100%;
+  height: 90px;
+  padding: 10px 16px;
+  font-size: 16px;
+  color: #666;
+  border-radius: 3px;
+  border: solid 1px #ef6d01;
+}
+.banner .swiper-container .form-container .btn-submit {
+  display: block;
+  margin-top: 20px;
+  height: 36px;
+  line-height: 36px;
+  font-size: 16px;
+  color: #fff !important;
+  text-align: center;
+  background-color: #ef6d01;
+  border-radius: 3px;
+  cursor: pointer;
+}
 .banner .title {
   position: absolute;
   top: 50%;
@@ -289,56 +316,35 @@ input:-ms-input-placeholder {
   text-align: center;
 }
 .footer {
-  height: 450px;
-  padding-top: 70px;
-  background: url("../img/foot.jpg") no-repeat;
-  background-position: center center;
+  height: 445px;
+  padding-top: 115px;
+  background-color: #393c40;
 }
 .footer .content {
   letter-spacing: 1px;
-  color: #fff;
 }
-.footer .content .left {
-  float: left;
-}
-.footer .content .left .company {
+.footer .content .company {
   font-size: 24px;
   color: #fff;
 }
-.footer .content .left .company-info {
+.footer .content .company-info {
   margin-top: 30px;
   font-size: 16px;
   line-height: 36px;
   letter-spacing: 0;
-  color: #ffffff;
+  color: #959da7;
 }
-.footer .content .left .company-info .school-addr .name {
+.footer .content .company-info .school-addr .name {
   float: left;
 }
-.footer .content .left .company-info .school-addr .addr {
+.footer .content .company-info .school-addr .addr {
   float: left;
 }
-.footer .content .left .copyright {
+.footer .content .copyright {
   margin-top: 30px;
   font-size: 18px;
-  color: #fff;
+  color: #959da7;
 }
-.footer .content .left .copyright > a {
-  color: #fff !important;
-}
-.footer .content .right-qrcode {
-  float: right;
-}
-.footer .content .right-qrcode .title {
-  margin-top: 5px;
-  font-family: PingFang-SC-Bold;
-  font-size: 24px;
-}
-.footer .content .right-qrcode .qrcode {
-  display: inline-block;
-  background-color: #000;
-  margin-top: 30px;
-}
-.footer .content .right-qrcode .qrcode > img {
-  opacity: 1;
+.footer .content .copyright > a {
+  color: #959da7 !important;
 }
