--- a/css/index.less
+++ b/css/index.less
@@ -1,17 +1,12 @@
 /*首页 样式*/
+body{
+    padding-top: 0;
+}
 .firstPage{
     height: 100vh;
-    .top-container{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 100;
-    }
+    padding-top: 280px;
     .banner{
-        height: 100vh;
-        padding-top:280px;
-        box-sizing: border-box; 
+        height: 100%;
         .swiper-container{
             height: 100%;
             .slide{
